<resources>
    <string name="app_name">TiendaElectronica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valLogin">Login</string>
    <string name="txtEmailLog">Ingrese su email</string>
    <string name="valPassLog">Ingrese su contraseña</string>
    <string name="ValLog">Ingresar</string>
    <string name="valRegister">Registrese</string>
    <string name="valRegist">Registro de Usuario</string>
</resources>